--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,9 +8,10 @@
     <title>API REST PHP</title>
 </head>
 <body>
-    <h2 id="title">API REST WITH PHP: Users</h2>
+    <h1 id="title">API REST WITH PHP: Users</h1>
     <div class="flex-container">
         <div class="fill">
+            <h2>Form</h2>
             <p>Name: </p> <input id="name" type="text" placeholder="Name"><br/>
             <p>Lastname: </p> <input id="lastName" type="text" placeholder="Lastname"><br/>
             <p>Birthday: </p> <input id="birthday" type="date" placeholder="dd/mm/yyyy"><br/>
@@ -18,7 +19,24 @@
             <button type="button" (click)="save()">Save</button>
         </div>
         <div class="show">
-            <p>test</p>
+            <h2>User List</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Lastname</th>
+                        <th>Birthday</th>
+                        <th>Country</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <td>aa</td>
+                    <td>bb</td>
+                    <td>aa</td>
+                    <td>bb</td>
+                </tbody>
+            </table>
+
         </div>
     </div>
 </body>
