--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,9 @@
             </table>
         </div>
     </div>
+    <footer>
+        made by Adriana adrianafas13@hotmail.com
+    </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.3/axios.min.js"></script>
     <script src="js/script.js"></script>
 </body>
